Completed commenting all the code we wrote(28-03-2021)

--- a/part1_starter/Makefile
+++ b/part1_starter/Makefile
@@ -1,43 +1,42 @@
 
-# R: Temporary make file to test code
+# # R: Temporary make file to test code
 
-all: server
-
-server: digraph.o server.o dijkstra.o
-	g++ digraph.o server.o dijkstra.o -o server -std=c++11
-
-digraph.o: digraph.cpp digraph.h
-	g++ -c digraph.cpp -o digraph.o -std=c++11
-
-server.o: server.cpp
-	g++ -c server.cpp -o server.o -std=c++11
-
-dijkstra.o: dijkstra.cpp dijkstra.h	heap.h
-	g++ -c dijkstra.cpp -o dijkstra.o -std=c++11
-
-clean:
-	rm -r -f digraph.o server.o dijkstra.o testfile
-
-# CC=g++
-# CFLAGS=-c -Wall -O2 -std=c++11
-# PROGS= server
-# OBJS= digraph.o server.o dijkstra.o
-
-# # executable targets
 # all: server
 
-# sever: digraph.o server.o dijkstra.o 
-# 	$(CC) digraph.o server.o dijkstra.o -o $(PROGS)
+# server: digraph.o server.o dijkstra.o
+# 	g++ digraph.o server.o dijkstra.o -o server -std=c++11
 
-# # object targets
 # digraph.o: digraph.cpp digraph.h
-# 	$(CC) digraph.cpp -o digraph.o $(CFLAGS)
+# 	g++ -c digraph.cpp -o digraph.o -std=c++11
 
 # server.o: server.cpp
-# 	$(CC) server.cpp -o server.o $(CFLAGS)
+# 	g++ -c server.cpp -o server.o -std=c++11
 
-# dijkstra.o: dijkstra.cpp dijkstra.h heap.h
-# 	$(CC) dijkstra.cpp -o dijkstra.o $(CFLAGS)
+# dijkstra.o: dijkstra.cpp dijkstra.h	heap.h
+# 	g++ -c dijkstra.cpp -o dijkstra.o -std=c++11
 
 # clean:
-# 	@rm $(OBJS) $(PROGS)
+# 	rm -r -f digraph.o server.o dijkstra.o testfile server
+
+CC=g++
+CFLAGS=-c -Wall -O2 -std=c++11
+OBJS= digraph.o server.o dijkstra.o
+
+# executable targets
+all: server
+
+server: digraph.o server.o dijkstra.o 
+	$(CC) digraph.o server.o dijkstra.o -o server
+
+# object targets
+digraph.o: digraph.cpp digraph.h
+	$(CC) digraph.cpp -o digraph.o $(CFLAGS)
+
+server.o: server.cpp
+	$(CC) server.cpp -o server.o $(CFLAGS)
+
+dijkstra.o: dijkstra.cpp dijkstra.h heap.h
+	$(CC) dijkstra.cpp -o dijkstra.o $(CFLAGS)
+
+clean:
+	@rm $(OBJS) server
